--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,11 +49,12 @@ deploy:
   image:
     name: curlimages/curl
   script:
-    - echo 'hello world'
     # backend setup
-    #- curl -X POST 
+    - curl -X https://portainer.sifs0005.infs.ch/api/webhooks/518e677a-d5da-4bed-8532-9d26718e2603
+    # cleanup service
+    - curl -X https://portainer.sifs0005.infs.ch/api/webhooks/ceca8964-4ae9-4301-ae47-86d6ba0330ca
     ## backend
-    #- curl -X POST 
+    - curl -X https://portainer.sifs0005.infs.ch/api/webhooks/e8649b61-2a94-4351-abca-18424231211c 
   only:
     refs:
       - main
