added automated tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ stages:
 run-pytest:
   stage: tests
   image:
-    name: python:3.11
+    name: mateusoliveira43/poetry:1.4-python3.11
   script:
     - cd backend
     - poetry install
