--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ build-docker-image:
       /kaniko/executor
       --context "${CI_PROJECT_DIR}/backend"
       --dockerfile "${CI_PROJECT_DIR}/docker/backend.dockerfile"
-      --target "deploy"
+      --target "prod"
       --force
       --destination "${CI_REGISTRY_IMAGE}/backend:${CI_COMMIT_SHORT_SHA}"
   retry: 2
@@ -46,7 +46,7 @@ build-docker-prod-image:
       /kaniko/executor
       --context "${CI_PROJECT_DIR}/backend"
       --dockerfile "${CI_PROJECT_DIR}/docker/backend.dockerfile"
-      --target "deploy"
+      --target "prod"
       --force
       --destination "${CI_REGISTRY_IMAGE}/backend:latest"
   only:
