use different setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,7 +61,7 @@ services:
       dockerfile: ../docker/backend.dockerfile
       target: prod
     command: >-
-      dockerize -wait tcp://django-db:5432 -timeout 30s
+      dockerize -wait-list "tcp://django-db:5432 file:///$POETRY_CACHE_DIR" -timeout 30s
       poetry run ./manage.py runserver_plus 0.0.0.0:8000
     # command: poetry run gunicorn config.asgi:application -b 0.0.0.0:8000 -k uvicorn.workers.UvicornWorker --reload
     # command: poetry run gunicorn config.wsgi --reload
@@ -69,7 +69,7 @@ services:
     volumes:
       - django-static-files:/files/static
       - django-media-files:/files/media
-      # - ./backend:/app
+      - ./backend:/app
     environment: &env
       # override this when your user is not 1000!
       USER_ID: 1000
