--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,19 @@
-image: gcr.io/kaniko-project/executor:debug
+image: docker:23.0.2
 
 stages:
+  - tests
   - build
   - deploy
+
+run-pytest:
+  stage: tests
+  script:
+    - docker compose -f docker-compose.testing.yml build --quiet
+    - docker compose -f docker-compose.testing.yml run --rm backend poetry install
+    - docker compose -f docker-compose.testing.yml up -d --quiet-pull
+    - docker compose -f docker-compose.testing.yml run --rm backend poetry run pytest
+    - docker compose -f docker-compose.testing.yml run --rm backend poetry run mypy .
+    - docker compose -f docker-compose.testing.yml down -v --remove-orphans || true
 
 build-docker-image:
   stage: build
@@ -16,7 +27,7 @@ build-docker-image:
       /kaniko/executor
       --context "${CI_PROJECT_DIR}/backend"
       --dockerfile "${CI_PROJECT_DIR}/docker/backend.dockerfile"
-      --target "deploy"
+      --target "prod"
       --force
       --destination "${CI_REGISTRY_IMAGE}/backend:${CI_COMMIT_SHORT_SHA}"
   retry: 2
@@ -36,7 +47,7 @@ build-docker-prod-image:
       /kaniko/executor
       --context "${CI_PROJECT_DIR}/backend"
       --dockerfile "${CI_PROJECT_DIR}/docker/backend.dockerfile"
-      --target "deploy"
+      --target "prod"
       --force
       --destination "${CI_REGISTRY_IMAGE}/backend:latest"
   only:
