Run mypy in strict mode (to see what happens)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ run-pytest:
     - docker compose -f docker-compose.testing.yml build --quiet
     - docker compose -f docker-compose.testing.yml up -d --quiet-pull
     - docker compose -f docker-compose.testing.yml run --rm backend poetry run pytest
-    - docker compose -f docker-compose.testing.yml run --rm backend poetry run mypy .
+    - docker compose -f docker-compose.testing.yml run --rm backend poetry run mypy --strict .
     - docker compose -f docker-compose.testing.yml down -v --remove-orphans || true
 
 build-docker-image:
