Add terraform lock file

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 docker-stack.yml
 app.egg-info
 __pycache__/
-backend.dockerfile
 
 # ignore all hidden files
 .*
 
 # explicitly allow some hidden files
 !.env-dist
-.gitignore
+!.gitignore
 !.gitlab-ci.yml
+!.terraform.lock.hcl
